# quick-start-creating-a-vector-database-for-RAG

./: CITATION.cff  README.md  exploring-chromadb.ipynb  exploring-data-extraction-from-pdf.ipynb  pyproject.toml
